使用 Colaboratory 建立

--- a/mta_list.ipynb
+++ b/mta_list.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "mta_list.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOh1wngVhYjc4A+YMDTBEpB",
+      "authorship_tag": "ABX9TyMrTM3Np102Rs7T5mboY+nU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,39 +88,39 @@
     {
       "cell_type": "code",
       "source": [
-        "list1+list2"
+        "list3=list1+list2"
+      ],
+      "metadata": {
+        "id": "Qw96cevc5gHW"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list3*2"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Qw96cevc5gHW",
-        "outputId": "7fecab02-9ce4-4f49-f9ba-d8c74baffc1c"
+        "id": "GXDBE74V50UH",
+        "outputId": "cc0bc63a-54e7-4e03-b40f-0d1a684d5955"
       },
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[1, 2, 3, 4, 5, 6]"
+              "[1, 2, 3, 4, 5, 6, 1, 2, 3, 4, 5, 6]"
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 9
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "GXDBE74V50UH"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
