使用 Colaboratory 建立

--- a/list_取值.ipynb
+++ b/list_取值.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "list_取值.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP31WyTRg/bBuAzn3qLPlbU",
+      "authorship_tag": "ABX9TyMA87gGc92l84sYbj7yrtTf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "metadata": {
         "id": "76y9zD4P6ydh"
       },
@@ -46,10 +46,24 @@
         "print \"list2[1:5]: \", list2[1:5]"
       ],
       "metadata": {
-        "id": "gvcUDeuY7Ez3"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 133
+        },
+        "id": "gvcUDeuY7Ez3",
+        "outputId": "5af2a4b6-e566-4a29-e63c-5b78e64567ae"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-8e64ffcd6d0e>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print \"list1[0]: \", list1[0]\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(\"list1[0]: \", list1[0])?\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -62,9 +76,9 @@
           "height": 35
         },
         "id": "5uK7igTl7JfP",
-        "outputId": "d1c25f02-e499-4a8c-9c99-d8c06976e2d6"
+        "outputId": "3af1f5f7-538c-4778-ff5e-165ca651209b"
       },
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -77,7 +91,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 9
         }
       ]
     },
@@ -91,9 +105,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y3K9h_OT7LtH",
-        "outputId": "c61810cc-5a49-49b4-f4f1-965939830016"
+        "outputId": "984a6f0d-446a-4364-cf3d-922d23377bc2"
       },
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,13 +121,51 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "print (\"list2[1:5]: \", list2[1:5])"
       ],
       "metadata": {
-        "id": "BoOkVNfS7PUf"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BoOkVNfS7PUf",
+        "outputId": "c90740bd-34d1-45c3-9987-fc32dc025f2c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "list2[1:5]:  [2, 3, 4, 5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " list2[1:5]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c6adadae-514b-44be-9028-298a5864282d",
+        "id": "sMrZ8KyX90Hj"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[2, 3, 4, 5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     }
   ]
 }
