使用 Colaboratory 建立

--- a/mta_list_index.ipynb
+++ b/mta_list_index.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "mta_list_index.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPVD8jTtaKFGaimb63w6rmZ",
+      "authorship_tag": "ABX9TyNXSOyiosnEZf5PDc0IP1MX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -188,7 +188,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 3. 由15到4,每次跳過2個"
+        "# 3. 由15到4反著走,每次跳過2個"
       ],
       "metadata": {
         "id": "NxX07xvZH_G8"
@@ -251,15 +251,82 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "# 4. 由最後一個往前,每次跳過2個"
       ],
       "metadata": {
-        "id": "pRiluNfQIQpe"
+        "id": "ydfpOuq6Jif1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "alph[::-3]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "pRiluNfQIQpe",
+        "outputId": "09d8b4c7-c581-4829-c877-f339c5c03c84"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'zwtqnkheb'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 5.由3到14,反著走"
+      ],
+      "metadata": {
+        "id": "x7Z96yD_KCLu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "alph[3:15:-1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "2T299te6J4Zu",
+        "outputId": "3b0d4ea7-b34f-4e82-c676-67090980f586"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "''"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
     }
   ]
 }
