使用 Colaboratory 建立

--- a/mta_list_index.ipynb
+++ b/mta_list_index.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "mta_list_index.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNXSOyiosnEZf5PDc0IP1MX",
+      "authorship_tag": "ABX9TyN8G84bFa1XEC5JxnWkFk7p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -325,6 +325,45 @@
           },
           "metadata": {},
           "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 6.由0到倒數第3個"
+      ],
+      "metadata": {
+        "id": "uGmvdTgjLmZG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "alph[0:-2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "jqg673GRLZmf",
+        "outputId": "3f77a287-5b11-4041-8edb-748c3d613dc5"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'abcdefghijklmnopqrstuvwx'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 15
         }
       ]
     }
