使用 Colaboratory 建立

--- a/mta_list_index.ipynb
+++ b/mta_list_index.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "mta_list_index.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN8G84bFa1XEC5JxnWkFk7p",
+      "authorship_tag": "ABX9TyP2yLnFduVriGAFBfgK26Z/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -364,6 +364,45 @@
           },
           "metadata": {},
           "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 由0到倒數第3個,0可以省略"
+      ],
+      "metadata": {
+        "id": "iisX7wtdMNDJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "alph[:-2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "4kIVoN4sMIkR",
+        "outputId": "588c4880-14a9-4ebd-de37-425104c247b8"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'abcdefghijklmnopqrstuvwx'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 16
         }
       ]
     }
