使用 Colaboratory 建立

--- a/mta_list_index.ipynb
+++ b/mta_list_index.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "mta_list_index.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP2yLnFduVriGAFBfgK26Z/",
+      "authorship_tag": "ABX9TyNCER0T67EQLxYndX+55k38",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -405,6 +405,52 @@
           "execution_count": 16
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 7.由1到最後,每次跳過一個"
+      ],
+      "metadata": {
+        "id": "IMbSUMNSM11u"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "alph[1::2], alph"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XyYMHOunM438",
+        "outputId": "eb592207-d835-49cc-9bdd-654cba2b5ee1"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('bdfhjlnprtvxz', 'abcdefghijklmnopqrstuvwxyz')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Ogt9mb0oNL0O"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
