使用 Colaboratory 建立

--- a/mta_步速計算器.ipynb
+++ b/mta_步速計算器.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "mta_步速計算器.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOvWnHg4D7KoTg4shMlqm1v",
+      "authorship_tag": "ABX9TyN2Lb0dLpoN2DevmnjecKYV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "phIaESjx70tI",
-        "outputId": "ea292f95-d724-4919-e3a4-7dd02aaa8439"
+        "outputId": "022617a4-3319-4b8c-bb68-b46896627a85"
       },
       "outputs": [
         {
@@ -60,19 +60,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J3PagLHC8KKM",
-        "outputId": "59273955-7331-479c-892a-3ea1cf9394c7"
+        "outputId": "552dfa0b-5a54-4c63-b5f9-38e752983ed0"
       },
-      "execution_count": 4,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "100.0"
+              "1000.0"
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 12
         }
       ]
     },
@@ -88,17 +88,69 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ooa1c1hC9GUk",
-        "outputId": "abee4cc8-c902-471c-8961-8c4ededafd0c"
+        "outputId": "e1899894-f23a-4d11-c91e-091aa555d864"
       },
-      "execution_count": 8,
+      "execution_count": 13,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "請輸入經過分鐘20\n",
-            "請輸入經過秒數20\n"
+            "請輸入經過分鐘10\n",
+            "請輸入經過秒數10\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "distance_kms"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1kPQUEnb-cEE",
+        "outputId": "8a3a8beb-6990-4205-c000-48dc78cf47a9"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "time_minute"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GadjYzg4-jCb",
+        "outputId": "ee48cd1c-ce61-4971-e5f0-db32173a1c00"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
         }
       ]
     },
@@ -114,15 +166,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2NjYFisi9GXU",
-        "outputId": "a30b3892-0507-48ce-ec8c-fca183ee8455"
+        "outputId": "ae3fc368-a4ac-4790-e216-5c6ffba8d2f6"
       },
-      "execution_count": 9,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "步速是:  20.0:20.0\n"
+            "步速是:  10.0:10.0\n"
           ]
         }
       ]
@@ -137,19 +189,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-0s0OXtx9Ga1",
-        "outputId": "4ae2a099-cf9b-43f4-ad20-1c07d264c4fe"
+        "outputId": "2e65d308-0457-47b2-8e90-f7fd6c97a70f"
       },
-      "execution_count": 10,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1220"
+              "610"
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 17
         }
       ]
     },
