--- a/ITS_13.ipynb
+++ b/ITS_13.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPaTGiuvTwnBRkqZcYCgMzp",
+      "authorship_tag": "ABX9TyMiR4VSfur9U5RrFP5sVR3D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,6 +60,42 @@
         "  sum += rating \n",
         "  count += 1\n",
         "  average = float(sum/count)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum = count = done = 0 \n",
+        "average = 0.0 \n",
+        "\n",
+        "while done != -1:\n",
+        "  rating = float(input(\"Enter next rating (1-5, -1 for done)\")) \n",
+        "  if rating == -1:\n",
+        "    print(\"The average star rating for the new coffee is {}\".format(average,'.2f'))\n",
+        "    break\n",
+        "  sum += rating \n",
+        "  count += 1\n",
+        "  average = float(sum/count)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y1vcB_PEAl5_",
+        "outputId": "9e34df52-ff98-4041-bd8a-f22ab0356d51"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter next rating (1-5, -1 for done)1\n",
+            "Enter next rating (1-5, -1 for done)2\n",
+            "Enter next rating (1-5, -1 for done)-1\n",
+            "The average star rating for the new coffee is 1.5\n"
+          ]
+        }
       ]
     }
   ]
